@@ -5,14 +5,21 @@ import com.adote.api.core.Enums.PorteEnum;
 import com.adote.api.core.Enums.SexoEnum;
 import com.adote.api.core.Enums.TipoAnimalEnum;
 import com.adote.api.core.entities.Animal;
+import com.adote.api.core.entities.ChavePix;
 import com.adote.api.core.entities.Organizacao;
 import com.adote.api.core.usecases.animal.get.GetAllAnimaisCase;
+import com.adote.api.core.usecases.chavePix.get.GetChavesByOrgIdCase;
 import com.adote.api.core.usecases.organizacao.delete.DeleteOrganizacaoById;
 import com.adote.api.core.usecases.organizacao.get.GetAllOrganizacoesCase;
 import com.adote.api.core.usecases.organizacao.get.GetOrganizacaoById;
 import com.adote.api.infra.dtos.animal.response.AnimalResponseDTO;
+import com.adote.api.infra.dtos.chavePix.response.ChavePixSimplificadaDTO;
+import com.adote.api.infra.dtos.organizacao.response.OrganizacaoBaseDTO;
 import com.adote.api.infra.dtos.organizacao.response.OrganizacaoResponseDTO;
+import com.adote.api.infra.dtos.page.response.PageResponseDTO;
+import com.adote.api.infra.filters.organizacao.OrganizacaoFilter;
 import com.adote.api.infra.mappers.AnimalMapper;
+import com.adote.api.infra.mappers.ChavePixMapper;
 import com.adote.api.infra.mappers.OrganizacaoMapper;
 import com.adote.api.infra.persistence.entities.OrganizacaoEntity;
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -38,95 +45,52 @@ public class OrganizacaoController {
     private final GetOrganizacaoById getOrganizacaoById;
     private final GetAllOrganizacoesCase getAllOrganizacoesCase;
     private final DeleteOrganizacaoById deleteOrganizacaoById;
-    private final GetAllAnimaisCase getAllAnimaisCase;
 
-    private final AnimalMapper animalMapper;
     private final OrganizacaoMapper organizacaoMapper;
 
-    @GetMapping("/find/all")
-    public ResponseEntity<Map<String, Object>> findAllOrganizacoes(
+    @GetMapping
+    public ResponseEntity<PageResponseDTO<OrganizacaoBaseDTO>> getAllOrganizacoes(
             @RequestParam(required = false) String cidade,
             @RequestParam(required = false) String estado,
             @RequestParam(defaultValue = "0") int page) {
 
+        OrganizacaoFilter filter = new OrganizacaoFilter();
+        filter.setCidade(cidade);
+        filter.setEstado(estado);
+
         Pageable pageable = PageRequest.of(page, 20);
 
-        Page<Organizacao> organizacaoPage;
-        if (cidade != null || estado != null) {
-            organizacaoPage = getAllOrganizacoesCase.execute(cidade, estado, pageable);
-        } else {
-            organizacaoPage = getAllOrganizacoesCase.execute(pageable);
-        }
+        Page<Organizacao> organizacaoPage = getAllOrganizacoesCase.execute(filter, pageable);
 
-        List<OrganizacaoResponseDTO> organizacaoResponseDTOList = organizacaoPage.stream()
-                .map(organizacaoMapper::toResponseDTO)
-                .toList();
+        List<OrganizacaoBaseDTO> organizacaoBaseDTOList = organizacaoPage.getContent().stream()
+                .map(organizacaoMapper::toBaseDTO)
+                .collect(Collectors.toList());
 
-        Map<String, Object> response = new HashMap<>();
-        response.put("organizacoes", organizacaoResponseDTOList);
-        response.put("currentPage", organizacaoPage.getNumber());
-        response.put("totalItems", organizacaoPage.getTotalElements());
-        response.put("totalPages", organizacaoPage.getTotalPages());
+        PageResponseDTO<OrganizacaoBaseDTO> response = new PageResponseDTO<>(
+                organizacaoBaseDTOList,
+                organizacaoPage.getNumber(),
+                organizacaoPage.getTotalElements(),
+                organizacaoPage.getTotalPages()
+        );
 
-        return ResponseEntity.ok().body(response);
+        return ResponseEntity.ok(response);
     }
 
-    @GetMapping("/find")
-    public ResponseEntity<OrganizacaoResponseDTO> findOrganizacaoById(
-            @RequestParam Long id,
-            @RequestParam(defaultValue = "true") boolean includeAnimals,
-            @RequestParam(defaultValue = "0") int page,
-            @RequestParam(required = false) TipoAnimalEnum tipo,
-            @RequestParam(required = false) IdadeEnum idade,
-            @RequestParam(required = false) PorteEnum porte,
-            @RequestParam(required = false) SexoEnum sexo) {
-
-        Optional<Organizacao> organizacaoOptional = getOrganizacaoById.execute(id);
-
-        if (organizacaoOptional.isPresent()) {
-            Organizacao organizacao = organizacaoOptional.get();
-            OrganizacaoResponseDTO responseDTO = organizacaoMapper.toResponseDTO(organizacao);
-
-            if (includeAnimals) {
-                Pageable pageable = PageRequest.of(page, 20);
-
-                Page<Animal> animalPage = getAllAnimaisCase.execute(
-                        tipo, idade, porte, sexo, id, pageable);
-
-                List<AnimalResponseDTO> animalResponseDTOList = animalPage.stream()
-                        .map(animalMapper::toResponseDTO)
-                        .collect(Collectors.toList());
-
-                Map<String, Object> animaisData = new HashMap<>();
-                animaisData.put("content", animalResponseDTOList);
-                animaisData.put("currentPage", animalPage.getNumber());
-                animaisData.put("totalItems", animalPage.getTotalElements());
-                animaisData.put("totalPages", animalPage.getTotalPages());
-
-                responseDTO = new OrganizacaoResponseDTO(
-                        responseDTO.id(),
-                        responseDTO.nome(),
-                        responseDTO.numero(),
-                        responseDTO.cnpj(),
-                        responseDTO.endereco(),
-                        responseDTO.email(),
-                        animaisData
-                );
-            }
-
-            return ResponseEntity.ok(responseDTO);
-        }
-
-        return ResponseEntity.notFound().build();
+    @GetMapping("/{id}")
+    public ResponseEntity<OrganizacaoBaseDTO> getOrganizacaoById(@PathVariable Long id) {
+        return getOrganizacaoById.execute(id)
+                .map(organizacao -> ResponseEntity.ok(organizacaoMapper.toBaseDTO(organizacao)))
+                .orElse(ResponseEntity.notFound().build());
     }
 
-    @DeleteMapping("/delete")
-    public ResponseEntity<Void> deleteOrganizacaoById(@RequestParam Long id) {
-        Optional<Organizacao> organizacaoEntity = getOrganizacaoById.execute(id);
-        if (organizacaoEntity.isPresent()) {
-            deleteOrganizacaoById.execute(id);
-        }
-        return ResponseEntity.noContent().build();
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteOrganizacao(@PathVariable Long id) {
+        return getOrganizacaoById.execute(id)
+                .map(organizacao -> {
+                    deleteOrganizacaoById.execute(id);
+                    return ResponseEntity.noContent().<Void>build();
+                })
+                .orElse(ResponseEntity.notFound().build());
     }
 
 }
